# HyperNeRFGAN

./: README.md  pyproject.toml
hyper_nerf_gan/configs/: nerf-gan.yml  original.yml
hyper_nerf_gan/src/: examples_from_pickle.py  legacy.py  train.py
hyper_nerf_gan/src/dnnlib/: __init__.py
hyper_nerf_gan/src/infra/: __init__.py  launch_local.py
hyper_nerf_gan/src/metrics/: metric_main.py  metric_utils.py  perceptual_path_length.py
hyper_nerf_gan/src/nerf/: run_nerf.py
hyper_nerf_gan/src/scripts/: profile.py
hyper_nerf_gan/src/torch_utils/: misc.py  persistence.py  training_stats.py
hyper_nerf_gan/src/torch_utils/ops/: bias_act.py  grid_sample_gradfix.py  upfirdn2d.py
hyper_nerf_gan/src/training/: augment.py  dataset.py  layers.py  loss.py  networks.py  training_loop.py
