[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-nerf-pytorch"
requires-python = ">=3.9"
authors = [
    {name = "waczyjoan"},
]
description="Python library."
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
version="0.0.1"
dynamic = ["readme"]
dependencies = [
        "cudatoolkit=10.2",
        "pytorch=1.7.1",
        "torchvision=0.8.2",
        "imageio",
        "imageio-ffmpeg",
        "protobuf=3.20.1",
        "hydra-core==1.0.6",
        "click==7.1.2",
        "scipy==1.6.1",
        "ninja==1.10.0",
        "tensorboard==2.4.1",
        "tqdm==4.59.0",
        "gitpython",
        "gpustat",
        "opencv-python",
    ]


[tool.setuptools.dynamic]
version = {attr = "hyper-nerf-pytorch.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages]
find = {}
